--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 /* Body styling */
 body {
   background: #713e94;
-  color: #bc2b5a;
+  color: #fff;
   font-family: Helvetica, Arial;
   font-size: 27px;
-  text-align: center;
   font-weight: 300;
   line-height: 1.65em;
   margin: 0 auto;
@@ -15,8 +14,8 @@ body {
 
 /* Heading Styles */
 h1 {
-  font-size: 120px;
-  color: #4852ae;
+  font-size: 60px;
+  color: #fff;
   text-align: center;
 }
 
